Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-48373

Warmup race condition between backfill task and rollback

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.1.0
    • 7.1.0
    • couchbase-bucket
    • 7.1.0-1250

    Description

      Steps To Recreate:
      Crash Recovery Test

      1. Created a 4 node cluster(replicas =1, bucket_ram_quota = 256MB per node)
      2. Loaded 40 million Items (item size = 256 bytes, DGM =5%)
      3. Start doc ops (create:expiry).
      4. During doc ops, keep doing graceful restarts (we do wait for bucket warmup before triggering next graceful restart. after bucket warm up there is a sleep of 30 to 60 secs before triggering next graceful restart)

      Memcached Logs:
      Found on Node 172.23.107.31

      CRITICAL (default) WarmupBackfillTask::run(): caught exception while running backfill - aborting warmup: WarmupVbucketVisitor::visit(): vb:837 shardId:5 failed to create BySeqnoScanContext, for backfill task:'Warmup - loading KV Pairs shard 5'
      

      QE-TEST:

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/testexec.73190.ini bucket_storage=magma,rerun=false,GROUP=P0;graceful;256MB,randomize_value=true,bucket_eviction_policy=fullEviction,replicas=1,nodes_init=4,enable_dp=false,collect_pcaps=True,key_size=12,upgrade_version=7.1.0-1250 -t storage.magma.magma_crash_recovery.MagmaCrashTests.test_crash_during_ops,graceful=True,bucket_ram_quota=256,multiplier=1,batch_size=500,num_items=40000000,doc_size=256,doc_ops=create:expiry,GROUP=P0;graceful;256MB'
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ankush.sharma Ankush Sharma
            ankush.sharma Ankush Sharma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty