MB-48373: Don't allow Consumers to connect until warmup completes

Wait for warmup to complete fully before allowing connections to
prevent an issue in which a Consumer came along after warmup
finished loading data, but had not yet finished running all tasks,
made a replica vBucket roll back to 0 (deleting all the files on
disk in the process), and a subsequent scan errorred as the file
no longer existed on disk.

Change-Id: Iea20b86e8dec782ea7b1aacb94ef8d33141c0b9a
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/162170
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: James H <james.harrison@couchbase.com>