engines/ep/src/ep_engine.cc
@@ -6333,8 +6333,11 @@ cb::engine_errc EventuallyPersistentEngine::dcpOpen(
         }
         handler = dcpConnMap_->newProducer(cookie, connName, flags);
     } else {
-        // dont accept dcp consumer open requests during warm up
-        if (!kvBucket->isWarmupLoadingData()) {
+        // Don't accept dcp consumer open requests during warm up. This waits
+        // for warmup to complete entirely (including background tasks) as it
+        // was observed in MB-48373 that a rollback from a DCP connection could
+        // delete a vBucket from under a warmup task.
+        if (kvBucket->isWarmupComplete()) {
             // Check if consumer_name specified in value; if so use in Consumer
             // object.
             nlohmann::json jsonValue;
