engines/ep/src/kv_bucket.h
@@ -630,7 +630,7 @@ public:
     }
 
     bool isWarmupLoadingData() override;
-
+    bool isWarmupComplete() override;
     bool isWarmupOOMFailure() override;
 
     bool hasWarmupSetVbucketStateFailed() const override;
